styles/Layout.module.css
.layout {
  display: grid;
  grid-template-areas:
    "bar"
    "wrapper";
}

.layout__brandBar {
  grid-area: bar;
  background-color: var(--red);
  display: flex;
  justify-content: center;
  position: relative;
  background-image: url("/assets/moth_tile_sm.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

.layout__brandBarInner {
  width: 100%;
}

.layout__wrapper {
  grid-area: wrapper;
  background-color: var(--color-bg);
}

.layout__main {
  padding: 2rem;
  margin: 2rem auto 4rem auto;
  max-width: var(--content-max-width);
}

.layout__brandBarMoth {
  margin: 2rem 1rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 8rem;
}

.layout__brandBarMoth svg {
  max-width: 20rem;
}

@media screen and (min-width: 1080px) {
  .layout {
    grid-template-columns: 1fr 3fr;
    grid-template-areas: "bar wrapper wrapper wrapper";
    justify-content: flex-start;
    background: var(--color-bg);
  }

  .layout__brandBar {
    min-height: 100vh;
    background-attachment: fixed;
  }

  .layout__brandBarInner {
    position: fixed;
    width: unset;
  }

  .layout__brandBarMoth {
    height: unset;
    margin: 4rem;
  }
}

